# moor-hackercore

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  hacker.sh
core/: #0.moo  (+61 more)
vcs-worker/: .gitignore  ARCHITECTURE.md  Cargo.toml  ENVIRONMENT.md  PROTOCOL.md  README.md  example_usage.md
vcs-worker/src/: arg_validation.rs  config.rs  database.rs  error_utils.rs  git_backup.rs  git_ops.rs  lib.rs  main.rs  meta_config.rs  object_diff.rs  objects_tree.rs  router.rs  types.rs  util.rs  utils.rs
vcs-worker/src/git/: channel.rs  config.rs  mod.rs  operations.rs  repository.rs  utils.rs
vcs-worker/src/git/operations/: commit_ops.rs  file_ops.rs  init_ops.rs  pull_ops.rs  remote_ops.rs  stash_ops.rs  status_ops.rs
vcs-worker/src/git/tests/: channel_tests.rs  commit_ops_tests.rs  config_tests.rs  file_ops_tests.rs  mod.rs  remote_ops_tests.rs  repository_tests.rs  status_ops_tests.rs  utils_tests.rs
vcs-worker/src/model/: README.md  commit_compiler.rs  example.rs  mod.rs  object_delta.rs
vcs-worker/src/operations/: clone_op.rs  hello_op.rs  mod.rs  registry.rs
vcs-worker/src/operations/change/: change_abandon_op.rs  change_approve_op.rs  change_create_op.rs  change_stash_op.rs  change_status_op.rs  change_submit_op.rs  change_switch_op.rs  mod.rs  test_abandon_delta.rs  test_create_validation.rs
vcs-worker/src/operations/index/: index_calc_delta_op.rs  index_list_op.rs  index_update_op.rs  mod.rs
vcs-worker/src/operations/meta/: meta_add_ignored_property_op.rs  meta_add_ignored_verb_op.rs  meta_clear_ignored_properties_op.rs  meta_clear_ignored_verbs_op.rs  meta_remove_ignored_property_op.rs  meta_remove_ignored_verb_op.rs  meta_utils.rs  mod.rs
vcs-worker/src/operations/object/: mod.rs  object_delete_op.rs  object_diff_op.rs  object_get_op.rs  object_history_op.rs  object_list_op.rs  object_property_rename_op.rs  object_rename_op.rs  object_switch_op.rs  object_update_op.rs  object_verb_rename_op.rs
vcs-worker/src/operations/system/: mod.rs  status_op.rs
vcs-worker/src/operations/user/: mod.rs  stat_op.rs  user_add_permission_op.rs  user_create_op.rs  user_delete_api_key_op.rs  user_delete_op.rs  user_disable_op.rs  user_enable_op.rs  user_generate_api_key_op.rs  user_list_op.rs  user_remove_permission_op.rs
vcs-worker/src/operations/workspace/: mod.rs  workspace_list_op.rs  workspace_submit_op.rs
vcs-worker/src/providers/: changes.rs  error.rs  head.rs  index.rs  mod.rs  objects.rs  refs.rs  repository.rs  user.rs  workspace.rs
vcs-worker/src/vcs/: meta_handler.rs  mod.rs  object_handler.rs  processor.rs  repository_manager.rs  status_handler.rs  types.rs  workflow_handler.rs
vcs-worker/src/vcs/tests/: mod.rs  workflow_tests.rs
vcs-worker/tests/: README.md  config_tests.rs  git_backup_tests.rs  hint_system_tests.rs  integration_test.rs  main_integration_tests.rs  multi_instance_isolation_test.rs  test_suite.rs
vcs-worker/tests/common/: client.rs  mod.rs
vcs-worker/tests/operations/: blake3_hash_tests.rs  change_operations.rs  change_status_tests.rs  change_switch_tests.rs  clone_tests.rs  index_operations.rs  index_update_tests.rs  meta_operations.rs  mod.rs  object.rs  object_diff_operation_tests.rs  object_diff_tests.rs  object_lifecycle.rs  object_list.rs  object_rename_update_integration.rs  system_status_tests.rs  test_wizard_user.rs  user_management_tests.rs  workspace_approve_tests.rs  workspace_operations.rs
vcs-worker/tests/operations/change/: abandon_diff_inversion_tests.rs  abandon_tests.rs  approve_tests.rs  create_tests.rs  mod.rs  stash_tests.rs  submit_tests.rs
vcs-worker/tests/operations/clone/: authentication_tests.rs  error_handling_tests.rs  export_tests.rs  import_tests.rs  mod.rs
vcs-worker/tests/operations/meta/: add.rs  clear.rs  diff.rs  filtering_get.rs  filtering_update.rs  lifecycle.rs  meta_tracking.rs  mod.rs  remove.rs
vcs-worker/tests/operations/object/: crud.rs  delete_tests.rs  get_tests.rs  hint_tests.rs  history_tests.rs  lifecycle.rs  list.rs  mod.rs  object_diff_tests.rs  (+6 more)
vcs-worker/tests/resources/: detailed_test_object.moo  object_with_empty_props.moo  object_with_empty_props_renamed.moo  object_with_examine_verb.moo  object_with_look_verb.moo  object_with_multiname_verb.moo  object_with_multiname_verb_renamed.moo  object_with_property.moo  object_with_property_renamed.moo  test_object.moo  test_object_1.moo  test_object_2.moo  test_object_3.moo  test_object_with_meta.moo
vms-worker/: Cargo.toml  ENVIRONMENT.md  PROTOCOL.md  README.md
vms-worker/src/: config.rs  git_ops.rs  lib.rs  main.rs  meta_config.rs  vcs_operations.rs
vms-worker/src/vms/: meta_handler.rs  mod.rs  object_handler.rs  processor.rs  repository_manager.rs  status_handler.rs  types.rs
(+11 files in other folders)
