[package]
name = "moor-vcs-worker"
version = "0.9.0-alpha"
rust-version = "1.88.0"
edition = "2024"
license = "GPL-3"
description = "A worker for handling version control of MOO entities"
categories = [
    "game",
    "virtual-world",
    "mud",
    "database",
    "programming-language",
]

[dependencies]
moor-common = { path = "../vendor/moor/crates/common" }
moor-var = { path = "../vendor/moor/crates/var" }
rpc-async-client = { path = "../vendor/moor/crates/rpc/rpc-async-client" }
rpc-common = { path = "../vendor/moor/crates/rpc/rpc-common" }
moor-objdef = { path = "../vendor/moor/crates/objdef" }
moor-compiler = { path = "../vendor/moor/crates/compiler" }
moor-db = { path = "../vendor/moor/crates/db" }

## Command line arguments parsing.
clap = "4.5"
clap_derive = "4.5"

## General.
color-eyre = "0.6"
eyre = "0.6"

## Asynchronous transaction processing & networking
reqwest = "0.12"
tokio = { version = "1.44", features = ["full"] }

## Logging & tracing
tracing = "0.1"
tracing-subscriber = "0.3"

## ZMQ / RPC
tmq = "0.5"
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }

## HTTP Server
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
async-trait = "0.1"
serde_json = "1.0"

## Git operations
git2 = "0.20"

## Date and time handling
chrono = { version = "0.4", features = ["serde"] }

## YAML parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

## File system operations
walkdir = "2.4"

## Regular expressions for parsing
regex = "1.11"

## Lazy static initialization
lazy_static = "1.4"

## System calls for user/group operations
libc = "0.2"

## Embedded database for objects storage
sled = "0.34"

## Error handling
thiserror = "1.0"

## Binary serialization
bincode = "1.3"

## Cryptographic hashing
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
